 @startuml
' note left of main #while: Комментарий.
' note top of Rightangled : Комментарий.
' note top of Object : Комментарий.
' note top of Vector : Комментарий.
skinparam dpi 200
skinparam shadowing false
main <-- Vector
main <-- Time
class main<<(m,#FF7700)>>{
    .. **Объекты** ..
    Time p;
    Vector <int>  A(5,0);
    Vector <int> B(3,0);
    Vector <int> C(2,0);
    Time t;
    Vector<Time> N(5, t);
} 
class Time{
    .. **private varible** ..
    # int min;
    # int sec;
    .. **public metod** ..
    + int get_min();
	+ int get_sec();
	+ void set_min(int m);
	+ void set_sec(int s);
    + void simTime (int *minS, int *secS);
    .. **Операции перегрузки** ..
	+ Time &operator = (const Time&);
	+ Time &operator ++ (); 
	+ Time operator ++ (int);
	+ friend Time operator + (const Time&, const Time&);
	+ friend Time operator - (Time&, int valuve);
	+ friend Time operator + (Time&, int valuve);
	+ friend istream &operator >> (istream&in, Time &t);
	+ friend ostream &operator << (ostream&out, const Time& t);
}
class Vector{
    .. **privat varible** ..
    - int size
    - int* data
    ..**public metod** ..
    + void Add(Object*)
    .. **Операции перегрузки** ..
    + Vector& operator=(const Vector& a)
    + int& operator[](int index)
    + Vector operator+(const int k)
    + int operator()()
    + friend ostream& operator << (ostream& out, const Vector& a)
    + friend istream& operator >> (istream& in, Vector& a)
   
}
 @enduml

